# cs-sprint1

./: .gitignore  CMakeLists.txt  README.md  conftest.py  pytest.ini
.github/workflows/: ci.yml
projects/intro_basics/intro_basics/: basics.py
projects/intro_basics/tests/: test_basics.py  test_count_vowels.py  test_three_funcs.py
projects/python_basics/python_basics/: day1_hands_on.py
projects/python_basics/tests/: test_day1_hands_on.py
projects/unit_converter/tests/: test_cli.py  test_conversions.py
projects/unit_converter/unit_converter/: cli.py  conversions.py
week01/cpp_gtest_demo/: CMakeLists.txt  sample.cpp  sample_test.cpp
week01/hello_cpp/: hello  main.cpp
week01/hello_py/: test_app.py
